--- a/uploads/core/templates/core/home.html
+++ b/uploads/core/templates/core/home.html
@@ -9,7 +9,7 @@
     <button type="submit">Upload</button>
   </form>
 
-       <img src="{% static 'image/plot.png'%}">
+       <img class="img-responsive" src="{% static 'image/plot.png'%}">
 
    </div>
 
