--- a/uploads/templates/base.html
+++ b/uploads/templates/base.html
@@ -4,8 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Simple File Upload</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="{% static 'css/viz.css'%}" rel="stylesheet" >
   </head>
-  <body>
+  <body class="container center">
     {% block content %}
     {% endblock %}
   </body>
